# research_agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GOVERNANCE.md  OLLAMA_SETUP.md  README.md  TEST_REPORT.md  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  requirements-runtime.txt  requirements.txt  research_agent  setup.py
.github/workflows/: claude.yml  test.yml
configs/: config.yaml  field_domain_mapping.json
docs/: CHANGELOG.md  DATA_SOURCES.md  PLAN.md  ROADMAP.md  SETUP.md  SHARING.md  STABILIZATION_TASKS.md  STORAGE_PHILOSOPHY.md  TODO.md  knowledge-explorer-split.jsx
notebooks/: time_series_anthropology.py
scripts/: enrich_existing_fields.py  seed_test_data.py  test_vram.sh
src/: __init__.py  main.py
src/agents/: __init__.py  research_agent.py
src/db/: __init__.py  vector_store.py
src/models/: __init__.py  embeddings.py  llm_loader.py  llm_utils.py
src/processors/: __init__.py  document_processor.py  ingestion_manager.py
src/research_agent/: __init__.py  init_cmd.py  main.py
src/scripts/: __init__.py  lookup_researchers.py
src/tools/: __init__.py  academic_search.py  citation_explorer.py  researcher_file_parser.py  web_search.py
src/ui/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_api_contracts.py  test_citation_analytics.py  test_citation_explorer.py  test_claude_native.py  test_claude_tools.py  test_config.py  test_config_loader.py  test_core.py  test_core_search.py  test_data_input_robustness.py  test_document_processor.py  test_enrichment_caching.py  test_field_enrichment.py  test_formatting.py  test_graph_builder_enrichment.py  test_init_cmd.py  test_integration_soft_failures.py  test_kb_metadata_store.py  test_layer_buttons.py  test_lightweight_install.py  test_multi_model_pipeline.py  test_perplexity_integration.py  test_pipeline_ui.py  test_reranker.py  test_research_agent.py  test_researcher_persistence.py  test_smoke.py  test_ui_components.py  test_vector_store_rerank.py  test_web_search_switch.py
tests/eval/: conftest.py  corpus.py  test_context_boosting.py  test_reranker_quality.py  test_retrieval_quality.py  test_synthesis_unit.py
tests/fixtures/: __init__.py  data.py
(+45 files in other folders)
