[project]
name = "research-agent"
version = "0.1.0"
description = "A personal research memory for social sciences researchers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Rolf", email = "fenris91@users.noreply.github.com" },
]

dependencies = [
    # Core ML/AI
    "torch>=2.2.0",
    "torchvision",
    "torchaudio",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.43.0",
    "sentence-transformers>=2.6.0",

    # Agent Framework
    "langchain>=0.1.16",
    "langchain-community>=0.0.32",
    "langgraph>=0.0.30",
    "langchain-huggingface>=0.0.3",

    # Vector Database
    "chromadb>=0.4.24",

    # Document Processing
    "pymupdf>=1.24.0",
    "unstructured[pdf]>=0.12.0",
    "python-docx>=1.1.0",
    "pypdf>=4.1.0",

    # Academic APIs
    "semanticscholar>=0.8.0",
    "pyalex>=0.13",
    "habanero>=1.2.6",

    # Web & HTTP
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "ddgs>=9.0.0",

    # Data Analysis
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.20.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "umap-learn>=0.5.0",

    # UI
    "gradio>=4.25.0",
    "jinja2>=3.1.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "tenacity>=8.2.0",
    "ollama>=0.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "black>=24.3.0",
    "ruff>=0.3.0",
    "ipython>=8.22.0",
]
cloud = [
    "openai>=1.14.0",
    "anthropic>=0.21.0",
]
graph = [
    "networkx>=3.0",
]

[project.scripts]
research-agent = "research_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
